ecmascript/parser/tests/test262-error-references/fail/3990bb94b19b1071.module.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/3990bb94b19b1071.module.js:1:3
  |
1 | ('\1')
  |   ^^

